# Quake

WinQuake/: CMakeLists.txt  WinQuake.sln  WinQuake.vcxproj  WinQuake.vcxproj.filters  cd_win.cpp  cl_parse.cpp  cmd.cpp  common.cpp  common.h  console.cpp  cvar.cpp  d_edge.cpp  d_init.cpp  d_local.h  d_modech.cpp  d_polyse.cpp  d_scan.cpp  draw.cpp  gl_draw.cpp  gl_mesh.cpp  gl_model.cpp  gl_rlight.cpp  gl_rmain.cpp  gl_rmisc.cpp  gl_rsurf.cpp  gl_screen.cpp  gl_vidnt.cpp  gl_warp.cpp  glquake.h  host.cpp  host_cmd.cpp  in_win.cpp  keys.cpp  mathlib.cpp  mathlib.h  menu.cpp  net_dgrm.cpp  net_main.cpp  net_wins.c  net_wins.cpp  (+27 more)
WinQuake/gas2masm/: CMakeLists.txt  gas2masm.c  gas2masm.cpp  gas2masm.vcxproj  gas2masm.vcxproj.filters
WinQuake/src/gas2masm/: CMakeLists.txt
WinQuake/src/winquake/: CMakeLists.txt  cd_win.cpp  d_fill.cpp  d_sprite.cpp  d_surf.cpp  gl_draw.cpp  host.cpp  host_cmd.cpp  input.h  menu.cpp  menu.h  pr_cmds.cpp  quakedef.h  r_aclip.cpp  r_edge.cpp  r_part.cpp  r_sprite.cpp  sbar.cpp  snd_dma.cpp  snd_mem.cpp  snd_mix.cpp  snd_win.cpp  sv_main.cpp  sys.h  view.cpp  winquake.h  world.cpp  worlda.s  zone.cpp
WinQuake/src/winquake/client/: CMakeLists.txt
WinQuake/src/winquake/net/: CMakeLists.txt
WinQuake/src/winquake/renderer/opengl/: CMakeLists.txt  gl_mesh.cpp  gl_model.cpp  gl_screen.cpp
WinQuake/src/winquake/renderer/software/: CMakeLists.txt  d_draw.s  d_draw16.s  d_iface.h  d_parta.s  d_polysa.s  d_scana.s  d_varsa.s  model.cpp  r_aclipa.s  r_alias.cpp  r_aliasa.s  r_drawa.s  r_varsa.s  screen.cpp
WinQuake/src/winquake/server/: CMakeLists.txt
